--- a/data/post/index.properties
+++ b/data/post/index.properties
@@ -1,13 +1,15 @@
-EN.properties.category = "Category"
-EN.properties.topic = "Topic"
-EN.properties.title = "Title"
-EN.properties.title.hint = "A title for your post"
-EN.properties.content = "Content"
-EN.properties.content.hint = "The content for your post"
+[EN]
+properties.category = Category
+properties.topic = Topic
+properties.title = Title
+properties.title.hint = A title for your post
+properties.content = Content
+properties.content.hint = The content for your post
 
-ES.properties.category = "Categoría"
-ES.properties.topic = "Tópico"
-ES.properties.title = "Título"
-ES.properties.title.hint = "El título de tu post"
-ES.properties.content = "Contenido"
-ES.properties.content.hint = "El contenido de tu post"
+[ES]
+properties.category = Categoría
+properties.topic = Tópico
+properties.title = Título
+properties.title.hint = El título de tu post
+properties.content = Contenido
+properties.content.hint = El contenido de tu post
