--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@types/node": "^10.12.24",
     "ajv": "^6.8.1",
     "colors": "^1.3.3"
+  },
+  "devDependencies": {
+    "properties-reader": "0.0.16",
+    "source-map-support": "^0.5.10"
   }
 }
