--- a/data/forum/post/index.properties
+++ b/data/forum/post/index.properties
@@ -1,15 +1,39 @@
 [EN]
-properties.category = Category
-properties.topic = Topic
-properties.title = Title
-properties.title.hint = A title for your post
-properties.content = Content
-properties.content.hint = The content for your post
+name = Post
+properties.category.label = Category
+properties.category.placeholder = Select a Category
+
+properties.topic.label = Topic
+properties.topic.placeholder = Choose a Topic
+
+properties.title.label = Title
+properties.title.placeholder = Write a Title
+properties.title.hint = A title for your post as will be seen by other users
+properties.title.search.label = Title
+properties.title.search.placeholder = Search for a phrase in the Title
+
+properties.content.label = Content
+properties.content.placeholder = The content for your post
+properties.content.hint = Write what you think and express yourself and your ideas
+properties.content.search.label = Content
+properties.content.search.placeholder = Search for a phrase in the Content
 
 [ES]
-properties.category = Categoría
-properties.topic = Tópico
-properties.title = Título
-properties.title.hint = El título de tu post
-properties.content = Contenido
-properties.content.hint = El contenido de tu post
+name = Publicación
+properties.category.label = Categoría
+properties.category.placeholder = Seleccione una Categoría
+
+properties.topic.label = Tópico
+properties.topic.placeholder = Escoja un Tópico
+
+properties.title.label = Título
+properties.title.placeholder = Escriba un Título
+properties.title.hint = El título de tu publicación como será visto por otros usuarios
+properties.title.search.label = Título
+properties.title.search.placeholder = Buscar frase en el Título
+
+properties.content.label = Contenido
+properties.content.placeholder = El contenido de tu post
+properties.content.hint = Escribe lo que piensas, y expresa tus ideas
+properties.content.search.label = Contenido
+properties.content.search.placeholder = Buscar frase en el Contenido
