--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/properties-reader": "0.0.1",
     "ajv": "^6.8.1",
     "colors": "^1.3.3",
+    "json-source-map": "^0.4.0",
     "properties-reader": "0.0.16",
     "source-map-support": "^0.5.10"
   }
