--- a/package.json
+++ b/package.json
@@ -8,15 +8,29 @@
   },
   "author": "Edward Gonzalez",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "webpack-cli": "^3.2.3"
+  },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.3.3",
     "@types/colors": "^1.2.1",
     "@types/node": "^10.12.24",
     "@types/properties-reader": "0.0.1",
     "ajv": "^6.8.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "colors": "^1.3.3",
     "json-source-map": "^0.4.0",
     "properties-reader": "0.0.16",
-    "source-map-support": "^0.5.10"
+    "source-map-loader": "^0.2.4",
+    "source-map-support": "^0.5.10",
+    "tslint": "^5.13.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.5"
   }
 }
