--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
   },
   "compileOnSave": true,
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "core/client"
   ],
   "include": [
     "**/*.ts"
