--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Itemize",
   "main": "index.js",
   "scripts": {
-    "install": "tsc && webpack",
-    "build": "node ./dist/core/builder/index.js",
+    "install": "tsc",
+    "build": "webpack && webpack --config ./webpack.config.production.js && node ./dist/core/builder/index.js",
     "start": "node ./dist/core/server/index.js"
   },
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "@types/escape-string-regexp": "^1.0.0",
+    "@types/express": "^4.16.1",
+    "escape-string-regexp": "^1.0.5",
+    "express": "^4.16.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "webpack-cli": "^3.2.3"
