--- a/data/cyclingexchangehq/forum/post/index.properties
+++ b/data/cyclingexchangehq/forum/post/index.properties
@@ -2,9 +2,13 @@
 name = Post
 properties.category.label = Category
 properties.category.placeholder = Select a Category
+properties.category.search.label = Category
+properties.category.search.placeholder = Filter by Category
 
 properties.topic.label = Topic
 properties.topic.placeholder = Choose a Topic
+properties.topic.search.label = Topic
+properties.topic.search.placeholder = Filter by Topic
 
 properties.title.label = Title
 properties.title.placeholder = Write a Title
@@ -22,9 +26,13 @@ properties.content.search.placeholder = Search for a phrase in the Content
 name = Publicación
 properties.category.label = Categoría
 properties.category.placeholder = Seleccione una Categoría
+properties.category.search.label = Categoría
+properties.category.search.placeholder = Filtre por Categoría
 
 properties.topic.label = Tópico
 properties.topic.placeholder = Escoja un Tópico
+properties.topic.search.label = Tópico
+properties.topic.search.placeholder = Filtre por Tópico
 
 properties.title.label = Título
 properties.title.placeholder = Escriba un Título
