--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "colors": "^1.3.3",
+    "css-loader": "^2.1.1",
     "graphql": "^14.1.1",
     "json-source-map": "^0.4.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "properties-reader": "0.0.16",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.10",
     "tslint": "^5.13.1",
