--- a/package.json
+++ b/package.json
@@ -11,39 +11,47 @@
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "@types/escape-string-regexp": "^1.0.0",
-    "@types/express": "^4.16.1",
-    "escape-string-regexp": "^1.0.5",
-    "express": "^4.16.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "webpack-cli": "^3.2.3"
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/colors": "^1.2.1",
+    "@types/escape-string-regexp": "^1.0.0",
+    "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
     "@types/node": "^10.12.30",
     "@types/properties-reader": "0.0.1",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "ajv": "^6.10.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "colors": "^1.3.3",
     "css-loader": "^2.1.1",
+    "escape-string-regexp": "^1.0.5",
     "graphql": "^14.1.1",
     "json-source-map": "^0.4.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "properties-reader": "0.0.16",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^4.4.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.10",
     "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
