--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,8 @@
   "presets": [
     "@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]
   ],
-  "plugins": ["@babel/plugin-transform-regenerator"]
+  "plugins": [
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
