--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/colors": "^1.2.1",
+    "@types/deep-equal": "^1.0.1",
     "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
@@ -37,6 +38,7 @@
     "babel-preset-react": "^6.24.1",
     "colors": "^1.3.3",
     "css-loader": "^2.1.1",
+    "deep-equal": "^1.0.1",
     "escape-string-regexp": "^1.0.5",
     "graphql": "^14.1.1",
     "json-source-map": "^0.4.0",
