--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@material-ui/core": "^3.9.2",
     "@types/colors": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
     "@types/escape-string-regexp": "^1.0.0",
@@ -41,9 +42,11 @@
     "deep-equal": "^1.0.1",
     "escape-string-regexp": "^1.0.5",
     "graphql": "^14.1.1",
+    "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "npm": "^6.9.0",
     "properties-reader": "0.0.16",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
