--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/uuid": "^3.4.4",
     "ajv": "^6.10.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
@@ -50,6 +51,7 @@
     "properties-reader": "0.0.16",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-jss": "^8.6.1",
     "react-router-dom": "^4.4.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
@@ -57,6 +59,7 @@
     "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
+    "uuid": "^3.3.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
