--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@material-ui/core": "^3.9.2",
+    "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
     "@types/escape-string-regexp": "^1.0.0",
@@ -29,10 +30,12 @@
     "@types/node": "^10.12.30",
     "@types/properties-reader": "0.0.1",
     "@types/react": "^16.8.8",
+    "@types/react-autosuggest": "^9.3.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/uuid": "^3.4.4",
     "ajv": "^6.10.0",
+    "autosuggest-highlight": "^3.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
@@ -50,6 +53,7 @@
     "npm": "^6.9.0",
     "properties-reader": "0.0.16",
     "react": "^16.8.4",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-jss": "^8.6.1",
     "react-router-dom": "^4.4.0",
