--- a/data/cyclingexchangehub/forum/post/index.properties
+++ b/data/cyclingexchangehub/forum/post/index.properties
@@ -1,9 +1,20 @@
 [en]
 name = Post
+
 properties.category.label = Category
 properties.category.placeholder = Select a Category
 properties.category.search.label = Category
 properties.category.search.placeholder = Filter by Category
+
+properties.category_locale.label = Category
+properties.category_locale.placeholder = Select a Category
+properties.category_locale.search.label = Category
+properties.category_locale.search.placeholder = Filter by Category
+
+properties.category_non_enforced.label = Category
+properties.category_non_enforced.placeholder = Select a Category
+properties.category_non_enforced.search.label = Category
+properties.category_non_enforced.search.placeholder = Filter by Category
 
 properties.topic.label = Topic
 properties.topic.placeholder = Choose a Topic
@@ -24,10 +35,21 @@ properties.content.search.placeholder = Search for a phrase in the Content
 
 [es]
 name = Publicación
+
 properties.category.label = Categoría
 properties.category.placeholder = Seleccione una Categoría
 properties.category.search.label = Categoría
 properties.category.search.placeholder = Filtre por Categoría
+
+properties.category_locale.label = Categoría
+properties.category_locale.placeholder = Seleccione una Categoría
+properties.category_locale.search.label = Categoría
+properties.category_locale.search.placeholder = Filtre por Categoría
+
+properties.category_non_enforced.label = Categoría
+properties.category_non_enforced.placeholder = Seleccione una Categoría
+properties.category_non_enforced.search.label = Categoría
+properties.category_non_enforced.search.placeholder = Filtre por Categoría
 
 properties.topic.label = Tópico
 properties.topic.placeholder = Escoja un Tópico
