--- a/data/cyclingexchangehub/forum/post/index.properties
+++ b/data/cyclingexchangehub/forum/post/index.properties
@@ -5,33 +5,42 @@ properties.category.label = Category
 properties.category.placeholder = Select a Category
 properties.category.search.label = Category
 properties.category.search.placeholder = Filter by Category
+properties.category.error.NOT_NULLABLE = Please select a category from the dropdown list
 
 properties.category_locale.label = Category
 properties.category_locale.placeholder = Select a Category
 properties.category_locale.search.label = Category
 properties.category_locale.search.placeholder = Filter by Category
+properties.category_locale.error.NOT_NULLABLE = Please select a category from the dropdown list
 
 properties.category_non_enforced.label = Category
 properties.category_non_enforced.placeholder = Select a Category
 properties.category_non_enforced.search.label = Category
 properties.category_non_enforced.search.placeholder = Filter by Category
+properties.category_non_enforced.error.NOT_NULLABLE = Please select a category from the dropdown list
+properties.category_non_enforced.error.TOO_LARGE = LARGE
 
 properties.topic.label = Topic
 properties.topic.placeholder = Choose a Topic
 properties.topic.search.label = Topic
 properties.topic.search.placeholder = Filter by Topic
+properties.topic.error.NOT_NULLABLE = Please select a topic from the dropdown list
 
 properties.title.label = Title
 properties.title.placeholder = Write a Title
 properties.title.hint = A title for your post as will be seen by other users
 properties.title.search.label = Title
 properties.title.search.placeholder = Search for a phrase in the Title
+properties.title.error.NOT_NULLABLE = The title cannot be empty
+properties.title.error.TOO_LARGE = Title is too long
 
 properties.content.label = Content
 properties.content.placeholder = The content for your post
 properties.content.hint = Write what you think and express yourself and your ideas
 properties.content.search.label = Content
 properties.content.search.placeholder = Search for a phrase in the Content
+properties.content.error.NOT_NULLABLE = The content cannot be empty
+properties.content.error.TOO_LARGE = You have surpassed the limit of characters for the content
 
 [es]
 name = Publicación
@@ -40,30 +49,39 @@ properties.category.label = Categoría
 properties.category.placeholder = Seleccione una Categoría
 properties.category.search.label = Categoría
 properties.category.search.placeholder = Filtre por Categoría
+properties.category.error.NOT_NULLABLE = Por favor selecciona una Categoría de la lista
 
 properties.category_locale.label = Categoría
 properties.category_locale.placeholder = Seleccione una Categoría
 properties.category_locale.search.label = Categoría
 properties.category_locale.search.placeholder = Filtre por Categoría
+properties.category_locale.error.NOT_NULLABLE = Please select a category from the dropdown list
 
 properties.category_non_enforced.label = Categoría
 properties.category_non_enforced.placeholder = Seleccione una Categoría
 properties.category_non_enforced.search.label = Categoría
 properties.category_non_enforced.search.placeholder = Filtre por Categoría
+properties.category_non_enforced.error.NOT_NULLABLE = Please select a category from the dropdown list
+properties.category_non_enforced.error.TOO_LARGE = LARGE
 
 properties.topic.label = Tópico
 properties.topic.placeholder = Escoja un Tópico
 properties.topic.search.label = Tópico
 properties.topic.search.placeholder = Filtre por Tópico
+properties.topic.error.NOT_NULLABLE = Por favor selecciona un Tópico de la lista
 
 properties.title.label = Título
 properties.title.placeholder = Escriba un Título
 properties.title.hint = El título de tu publicación como será visto por otros usuarios
 properties.title.search.label = Título
 properties.title.search.placeholder = Buscar frase en el Título
+properties.title.error.NOT_NULLABLE = El título no puede quedar vacío
+properties.title.error.TOO_LARGE = El título es muy largo
 
 properties.content.label = Contenido
 properties.content.placeholder = El contenido de tu post
 properties.content.hint = Escribe lo que piensas, y expresa tus ideas
 properties.content.search.label = Contenido
 properties.content.search.placeholder = Buscar frase en el Contenido
+properties.content.error.NOT_NULLABLE = El contenido no puede quedar vacío
+properties.content.error.TOO_LARGE = Has sobrepasado el límite de caracteres para el contenido
