--- a/data/user.properties
+++ b/data/user.properties
@@ -5,12 +5,18 @@ properties.username.label = Username
 properties.username.placeholder = Type an username
 properties.username.search.label = Username
 properties.username.search.placeholder = Type the username
+properties.username.error.NOT_NULLABLE = Missing username
+properties.username.error.TOO_LARGE = Username is too long
 
 properties.email.label = Email
 properties.email.placeholder = Your email address
+properties.email.error.NOT_NULLABLE = Missing email
+properties.email.error.TOO_LARGE = Email is too long
 
 properties.password.label = Password
 properties.password.placeholder = Password
+properties.password.error.NOT_NULLABLE = Missing password
+properties.password.error.TOO_LARGE = Password too long
 
 [es]
 name = Usuario
@@ -19,9 +25,15 @@ properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
 properties.username.search.label = Nombre de usuario
 properties.username.search.placeholder = Escriba el nombre del usuario
+properties.username.error.NOT_NULLABLE = Falta el nombre del usuario
+properties.username.error.TOO_LARGE = El nombre de usuario es demasiado largo
 
 properties.email.label = Email
 properties.email.placeholder = Dirección de correo electrónico
+properties.email.error.NOT_NULLABLE = Falta el correo electrónico
+properties.email.error.TOO_LARGE = El correo electrónico es demasiado largo
 
 properties.password.label = Contraseña
 properties.password.placeholder = Contraseña
+properties.password.error.NOT_NULLABLE = Falta la contraseña
+properties.password.error.TOO_LARGE = La contraseña es demasiado larga
