--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^16.8.8",
     "@types/react-autosuggest": "^9.3.7",
     "@types/react-dom": "^16.8.2",
+    "@types/react-jss": "^8.6.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/uuid": "^3.4.4",
     "ajv": "^6.10.0",
