--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
+    "@types/draft-js": "^0.10.29",
     "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
@@ -45,6 +46,7 @@
     "colors": "^1.3.3",
     "css-loader": "^2.1.1",
     "deep-equal": "^1.0.1",
+    "draft-js": "^0.10.5",
     "escape-string-regexp": "^1.0.5",
     "graphql": "^14.1.1",
     "install": "^0.12.2",
