--- a/package.json
+++ b/package.json
@@ -47,13 +47,17 @@
     "css-loader": "^2.1.1",
     "deep-equal": "^1.0.1",
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.3.3",
+    "draft-js-import-html": "^1.3.3",
     "escape-string-regexp": "^1.0.5",
+    "fast-html-parser": "^1.0.1",
     "graphql": "^14.1.1",
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
+    "null-loader": "^0.1.1",
     "properties-reader": "0.0.16",
     "react": "^16.8.4",
     "react-autosuggest": "^9.4.3",
