--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
-    "@types/draft-js": "^0.10.29",
     "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
@@ -46,9 +45,6 @@
     "colors": "^1.3.3",
     "css-loader": "^2.1.1",
     "deep-equal": "^1.0.1",
-    "draft-js": "^0.10.5",
-    "draft-js-export-html": "^1.3.3",
-    "draft-js-import-html": "^1.3.3",
     "escape-string-regexp": "^1.0.5",
     "fast-html-parser": "^1.0.1",
     "graphql": "^14.1.1",
@@ -63,6 +59,7 @@
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-jss": "^8.6.1",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.4.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
