moved things around

--- a/data/cyclingexchangehub/forum/post/index.properties
+++ b/data/cyclingexchangehub/forum/post/index.properties
@@ -40,6 +40,7 @@ properties.content.hint = Write what you think and express yourself and your ide
 properties.content.search.label = Content
 properties.content.search.placeholder = Search for a phrase in the Content
 properties.content.error.NOT_NULLABLE = The content cannot be empty
+properties.content.error.TOO_SMALL = The content cannot be empty
 properties.content.error.TOO_LARGE = You have surpassed the limit of characters for the content
 
 [es]
@@ -84,4 +85,5 @@ properties.content.hint = Escribe lo que piensas, y expresa tus ideas
 properties.content.search.label = Contenido
 properties.content.search.placeholder = Buscar frase en el Contenido
 properties.content.error.NOT_NULLABLE = El contenido no puede quedar vacío
+properties.content.error.TOO_SMALL = El contenido no puede quedar vacío
 properties.content.error.TOO_LARGE = Has sobrepasado el límite de caracteres para el contenido
