--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -2,6 +2,28 @@
 name = English
 number_separator = .
 
+format_bold = bold
+format_italic = italic
+format_underline = underline
+format_title = title
+format_quote = quote
+format_list_numbered = numbered list
+format_list_bulleted = list
+format_add_image = add image
+format_add_file = add file
+format_add_video = add embed video 
+
 [es]
 name = Español
 number_separator = ,
+
+format_bold = negrita
+format_italic = cursiva 
+format_underline = subrayada
+format_title = título
+format_quote = citar
+format_list_numbered = lista numérica
+format_list_bulleted = lista
+format_add_image = agregar foto
+format_add_file = agregar archivo
+format_add_video = agregar video embebido
