--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -12,6 +12,7 @@ properties.email.label = Email
 properties.email.placeholder = Your email address
 properties.email.error.NOT_NULLABLE = Missing email
 properties.email.error.TOO_LARGE = Email is too long
+properties.email.error.INVALID_SUBTYPE_VALUE = Email is invalid
 
 properties.password.label = Password
 properties.password.placeholder = Password
@@ -32,6 +33,7 @@ properties.email.label = Email
 properties.email.placeholder = Dirección de correo electrónico
 properties.email.error.NOT_NULLABLE = Falta el correo electrónico
 properties.email.error.TOO_LARGE = El correo electrónico es demasiado largo
+properties.email.error.INVALID_SUBTYPE_VALUE = El correo electrónico es inválido
 
 properties.password.label = Contraseña
 properties.password.placeholder = Contraseña
