--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -4,8 +4,178 @@ name = Item Definition Test
 properties.boolean.label = Boolean
 properties.boolean.search.label = Boolean in Search
 
+properties.boolean_nullable.label = Boolean Nullable
+properties.boolean_nullable.search.label = Boolean Nullable in Search
+
+properties.string.label = String
+properties.string.placeholder = String Placeholder
+properties.string.search.label = String in Search
+properties.string.search.placeholder = String Placeholder in Search
+properties.string.error.NOT_NULLABLE = String not Nullable error
+properties.string.error.TOO_LARGE = String too large error
+
+properties.string_nullable.label = String Nullable
+properties.string_nullable.placeholder = String Nullable Placeholder
+properties.string_nullable.search.label = String Nullable in Search
+properties.string_nullable.search.placeholder = String Nullable Placeholder in Search
+properties.string_nullable.error.TOO_LARGE = String Nullable too large error
+
+properties.string_values.label = String Values
+properties.string_values.placeholder = String Values Placeholder
+properties.string_values.search.label = String Values in Search
+properties.string_values.search.placeholder = String Values Placeholder in Search
+properties.string_values.values.one = one
+properties.string_values.values.two = two
+properties.string_values.values.three = three
+properties.string_values.values.four = four
+properties.string_values.error.NOT_NULLABLE = String Values not Nullable error
+
+properties.string_values_nullable.label = String Values Nullable
+properties.string_values_nullable.placeholder = String Values Nullable Placeholder
+properties.string_values_nullable.search.label = String Values Nullable in Search
+properties.string_values_nullable.search.placeholder = String Values Nullable Placeholder in Search
+properties.string_values_nullable.values.one = one
+properties.string_values_nullable.values.two = two
+properties.string_values_nullable.values.three = three
+properties.string_values_nullable.values.four = four
+properties.string_values_nullable.null_value = null value
+
+properties.integer.label = Integer
+properties.integer.placeholder = Integer Placeholder
+properties.integer.search.label = Integer in Search
+properties.integer.search.placeholder = Integer Placeholder in Search
+properties.integer.search.range.from.label = Integer Range From in Search
+properties.integer.search.range.to.label = Integer Range To in Search
+properties.integer.search.range.from.placeholder = Integer Placeholder Range From in Search
+properties.integer.search.range.to.placeholder = Integer Placeholder Range To in Search
+properties.integer.error.NOT_NULLABLE = Integer not Nullable error
+properties.integer.error.TOO_LARGE = Integer too large error
+
+properties.integer_nullable.label = Integer Nullable
+properties.integer_nullable.placeholder = Integer Nullable Placeholder
+properties.integer_nullable.search.label = Integer Nullable in Search
+properties.integer_nullable.search.placeholder = Integer Nullable Placeholder in Search
+properties.integer_nullable.search.range.from.label = Integer Nullable Range From in Search
+properties.integer_nullable.search.range.to.label = Integer Nullable Range To in Search
+properties.integer_nullable.search.range.from.placeholder = Integer Nullable Placeholder Range From in Search
+properties.integer_nullable.search.range.to.placeholder = Integer Nullable Placeholder Range To in Search
+properties.integer_nullable.error.TOO_LARGE = Integer Nullable too large error
+
+properties.integer_values.label = Integer Values
+properties.integer_values.placeholder = Integer Values Placeholder
+properties.integer_values.search.label = Integer Values in Search
+properties.integer_values.search.placeholder = Integer Values Placeholder in Search
+properties.integer_values.search.range.from.label = Integer Values Range From in Search
+properties.integer_values.search.range.to.label = Integer Values Range To in Search
+properties.integer_values.search.range.from.placeholder = Integer Values Placeholder Range From in Search
+properties.integer_values.search.range.to.placeholder = Integer Values Placeholder Range To in Search
+properties.integer_values.values.1 = one
+properties.integer_values.values.2 = two
+properties.integer_values.values.3 = three
+properties.integer_values.values.4 = four
+properties.integer_values.error.NOT_NULLABLE = Integer Values not Nullable error
+
+properties.integer_values_nullable.label = Integer Values Nullable
+properties.integer_values_nullable.placeholder = Integer Values Nullable Placeholder
+properties.integer_values_nullable.search.label = Integer Values Nullable in Search
+properties.integer_values_nullable.search.placeholder = Integer Values Nullable Placeholder in Search
+properties.integer_values_nullable.search.range.from.label = Integer Values Nullable Range From in Search
+properties.integer_values_nullable.search.range.to.label = Integer Values Nullable Range To in Search
+properties.integer_values_nullable.search.range.from.placeholder = Integer Values Nullable Placeholder Range From in Search
+properties.integer_values_nullable.search.range.to.placeholder = Integer Values Nullable Placeholder Range To in Search
+properties.integer_values_nullable.values.1 = one
+properties.integer_values_nullable.values.2 = two
+properties.integer_values_nullable.values.3 = three
+properties.integer_values_nullable.values.4 = four
+properties.integer_values_nullable.null_value = null value
+
 [es]
 name = Test de Definición de Item
 
 properties.boolean.label = Valor Booleano
 properties.boolean.search.label = Valor Booleano en Modo Búsqueda
+
+properties.boolean_nullable.label = Valor Booleano Nullable
+properties.boolean_nullable.search.label = Valor Booleano Nullable en Modo Búsqueda
+
+properties.string.label = String
+properties.string.placeholder = String Marcador
+properties.string.search.label = String en Modo Búsqueda
+properties.string.search.placeholder = String Marcador en Modo Búsqueda
+properties.string.error.NOT_NULLABLE = String error de no Nullable
+properties.string.error.TOO_LARGE = String demasiado larga error
+
+properties.string_nullable.label = String Nullable
+properties.string_nullable.placeholder = String Nullable Marcador
+properties.string_nullable.search.label = String Nullable en Modo Búsqueda
+properties.string_nullable.search.placeholder = String Nullable Marcador en Modo Búsqueda
+properties.string_nullable.error.TOO_LARGE = String Nullable demasiado larga error
+
+properties.string_values.label = String Valores
+properties.string_values.placeholder = String Valores Marcador
+properties.string_values.search.label = String Valores en Modo Búsqueda
+properties.string_values.search.placeholder = String Valores Marcador en Modo Búsqueda
+properties.string_values.values.one = uno
+properties.string_values.values.two = dos
+properties.string_values.values.three = tres
+properties.string_values.values.four = cuatro
+properties.string_values.error.NOT_NULLABLE = String Valores error de no Nullable
+
+properties.string_values_nullable.label = String Valores Nullable
+properties.string_values_nullable.placeholder = String Valores Nullable Marcador
+properties.string_values_nullable.search.label = String Valores Nullable en Modo Búsqueda
+properties.string_values_nullable.search.placeholder = String Valores Nullable Marcador en Modo Búsqueda
+properties.string_values_nullable.values.one = uno
+properties.string_values_nullable.values.two = dos
+properties.string_values_nullable.values.three = tres
+properties.string_values_nullable.values.four = cuatro
+properties.string_values_nullable.null_value = valor null
+
+properties.integer.label = Valor Entero
+properties.integer.placeholder = Valor Entero Marcador
+properties.integer.search.label = Valor Entero en Modo Búsqueda
+properties.integer.search.placeholder = Valor Entero Marcador en Modo Búsqueda
+properties.integer.search.range.from.label = Valor Entero en Modo Búsqueda Desde
+properties.integer.search.range.from.placeholder = Valor Entero Marcador en Modo Búsqueda Desde
+properties.integer.search.range.to.label = Valor Entero en Modo Búsqueda Hasta
+properties.integer.search.range.to.placeholder = Valor Entero Marcador en Modo Búsqueda Hasta
+properties.integer.error.NOT_NULLABLE = Valor Entero error de no Nullable
+properties.integer.error.TOO_LARGE = Valor Entero demasiado larga error
+
+properties.integer_nullable.label = Valor Entero Nullable
+properties.integer_nullable.placeholder = Valor Entero Nullable Marcador
+properties.integer_nullable.search.label = Valor Entero Nullable en Modo Búsqueda
+properties.integer_nullable.search.placeholder = Valor Entero Nullable Marcador en Modo Búsqueda
+properties.integer_nullable.search.range.from.label = Valor Entero Nullable en Modo Búsqueda Desde
+properties.integer_nullable.search.range.from.placeholder = Valor Entero Nullable Marcador en Modo Búsqueda Desde
+properties.integer_nullable.search.range.to.label = Valor Entero en Modo Nullable Búsqueda Hasta
+properties.integer_nullable.search.range.to.placeholder = Valor Entero Nullable Marcador en Modo Búsqueda Hasta
+properties.integer_nullable.error.TOO_LARGE = Valor Entero Nullable demasiado larga error
+
+properties.integer_values.label = Valor Entero Valores
+properties.integer_values.placeholder = Valor Entero Valores Marcador
+properties.integer_values.search.label = Valor Entero Valores en Modo Búsqueda
+properties.integer_values.search.placeholder = Valor Entero Valores Marcador en Modo Búsqueda
+properties.integer_values.search.range.from.label = Valor Entero Valores en Modo Búsqueda Desde
+properties.integer_values.search.range.from.placeholder = Valor Entero Valores Marcador en Modo Búsqueda Desde
+properties.integer_values.search.range.to.label = Valor Entero en Modo Valores Búsqueda Hasta
+properties.integer_values.search.range.to.placeholder = Valor Entero Valores Marcador en Modo Búsqueda Hasta
+properties.integer_values.values.1 = uno
+properties.integer_values.values.2 = dos
+properties.integer_values.values.3 = tres
+properties.integer_values.values.4 = cuatro
+properties.integer_values.error.NOT_NULLABLE = Valor Entero Valores error de no Nullable
+
+properties.integer_values_nullable.label = Valor Entero Valores Nullable
+properties.integer_values_nullable.placeholder = Valor Entero Valores Nullable Marcador
+properties.integer_values_nullable.search.label = Valor Entero Valores Nullable en Modo Búsqueda
+properties.integer_values_nullable.search.placeholder = Valor Entero Valores Nullable Marcador en Modo Búsqueda
+properties.integer_values_nullable.search.range.from.label = Valor Entero Valores Nullable en Modo Búsqueda Desde
+properties.integer_values_nullable.search.range.from.placeholder = Valor Entero Valores Nullable Marcador en Modo Búsqueda Desde
+properties.integer_values_nullable.search.range.to.label = Valor Entero en Modo Valores Nullable Búsqueda Hasta
+properties.integer_values_nullable.search.range.to.placeholder = Valor Entero Valores Nullable Marcador en Modo Búsqueda Hasta
+properties.integer_values_nullable.values.1 = uno
+properties.integer_values_nullable.values.2 = dos
+properties.integer_values_nullable.values.3 = tres
+properties.integer_values_nullable.values.4 = cuatro
+properties.integer_values_nullable.null_value = valor null
