--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -2,6 +2,11 @@
 name = English
 number_separator = .
 
+yes = yes
+no = no
+unspecified = unspecified
+any = any
+
 format_bold = bold
 format_italic = italic
 format_underline = underline
@@ -16,6 +21,11 @@ format_add_video = add embed video
 [es]
 name = Español
 number_separator = ,
+
+yes = si
+no = no
+unspecified = sin especificar
+any = cualquiera
 
 format_bold = negrita
 format_italic = cursiva 
