--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -89,6 +89,57 @@ properties.integer_values_nullable.values.3 = three
 properties.integer_values_nullable.values.4 = four
 properties.integer_values_nullable.null_value = null value
 
+properties.number.label = Number
+properties.number.placeholder = Number Placeholder
+properties.number.search.label = Number in Search
+properties.number.search.placeholder = Number Placeholder in Search
+properties.number.search.range.from.label = Number Range From in Search
+properties.number.search.range.to.label = Number Range To in Search
+properties.number.search.range.from.placeholder = Number Placeholder Range From in Search
+properties.number.search.range.to.placeholder = Number Placeholder Range To in Search
+properties.number.error.NOT_NULLABLE = Number not Nullable error
+properties.number.error.TOO_LARGE = Number too large error
+properties.number.error.TOO_MANY_DECIMALS = Number too many decimals error
+
+properties.number_nullable.label = Number Nullable
+properties.number_nullable.placeholder = Number Nullable Placeholder
+properties.number_nullable.search.label = Number Nullable in Search
+properties.number_nullable.search.placeholder = Number Nullable Placeholder in Search
+properties.number_nullable.search.range.from.label = Number Nullable Range From in Search
+properties.number_nullable.search.range.to.label = Number Nullable Range To in Search
+properties.number_nullable.search.range.from.placeholder = Number Nullable Placeholder Range From in Search
+properties.number_nullable.search.range.to.placeholder = Number Nullable Placeholder Range To in Search
+properties.number_nullable.error.TOO_LARGE = Number Nullable too large error
+properties.number_nullable.error.TOO_MANY_DECIMALS = Number Nullable too many decimals error
+
+properties.number_values.label = Number Values
+properties.number_values.placeholder = Number Values Placeholder
+properties.number_values.search.label = Number Values in Search
+properties.number_values.search.placeholder = Number Values Placeholder in Search
+properties.number_values.search.range.from.label = Number Values Range From in Search
+properties.number_values.search.range.to.label = Number Values Range To in Search
+properties.number_values.search.range.from.placeholder = Number Values Placeholder Range From in Search
+properties.number_values.search.range.to.placeholder = Number Values Placeholder Range To in Search
+properties.number_values.values.1 = version 1.0
+properties.number_values.values.1_dot_1 = version 1.1
+properties.number_values.values.1_dot_2 = version 1.2
+properties.number_values.values.2 = version 2.0
+properties.number_values.error.NOT_NULLABLE = Number Values not Nullable error
+
+properties.number_values_nullable.label = Number Values Nullable
+properties.number_values_nullable.placeholder = Number Values Nullable Placeholder
+properties.number_values_nullable.search.label = Number Values Nullable in Search
+properties.number_values_nullable.search.placeholder = Number Values Nullable Placeholder in Search
+properties.number_values_nullable.search.range.from.label = Number Values Nullable Range From in Search
+properties.number_values_nullable.search.range.to.label = Number Values Nullable Range To in Search
+properties.number_values_nullable.search.range.from.placeholder = Number Values Nullable Placeholder Range From in Search
+properties.number_values_nullable.search.range.to.placeholder = Number Values Nullable Placeholder Range To in Search
+properties.number_values_nullable.values.1 = version 1.0
+properties.number_values_nullable.values.1_dot_1 = version 1.1
+properties.number_values_nullable.values.1_dot_2 = version 1.2
+properties.number_values_nullable.values.2 = version 2.0
+properties.number_values_nullable.null_value = null value
+
 [es]
 name = Test de Definición de Item
 
@@ -179,3 +230,55 @@ properties.integer_values_nullable.values.2 = dos
 properties.integer_values_nullable.values.3 = tres
 properties.integer_values_nullable.values.4 = cuatro
 properties.integer_values_nullable.null_value = valor null
+
+properties.number.label = Valor Numérico
+properties.number.placeholder = Valor Numérico Marcador
+properties.number.search.label = Valor Numérico en Modo Búsqueda
+properties.number.search.placeholder = Valor Numérico Marcador en Modo Búsqueda
+properties.number.search.range.from.label = Valor Numérico en Modo Búsqueda Desde
+properties.number.search.range.from.placeholder = Valor Numérico Marcador en Modo Búsqueda Desde
+properties.number.search.range.to.label = Valor Numérico en Modo Búsqueda Hasta
+properties.number.search.range.to.placeholder = Valor Numérico Marcador en Modo Búsqueda Hasta
+properties.number.error.NOT_NULLABLE = Valor Numérico error de no Nullable
+properties.number.error.TOO_LARGE = Valor Numérico demasiado larga error
+properties.number.error.TOO_MANY_DECIMALS = Valor Numérico demasiados decimales error
+
+properties.number_nullable.label = Valor Numérico Nullable
+properties.number_nullable.placeholder = Valor Numérico Nullable Marcador
+properties.number_nullable.search.label = Valor Numérico Nullable en Modo Búsqueda
+properties.number_nullable.search.placeholder = Valor Numérico Nullable Marcador en Modo Búsqueda
+properties.number_nullable.search.range.from.label = Valor Numérico Nullable en Modo Búsqueda Desde
+properties.number_nullable.search.range.from.placeholder = Valor Numérico Nullable Marcador en Modo Búsqueda Desde
+properties.number_nullable.search.range.to.label = Valor Numérico en Modo Nullable Búsqueda Hasta
+properties.number_nullable.search.range.to.placeholder = Valor Numérico Nullable Marcador en Modo Búsqueda Hasta
+properties.number_nullable.error.TOO_LARGE = Valor Numérico Nullable demasiado larga error
+properties.number_nullable.error.TOO_MANY_DECIMALS = Valor Numérico Nullable demasiados decimales error
+
+properties.number_values.label = Valor Numérico Valores
+properties.number_values.placeholder = Valor Numérico Valores Marcador
+properties.number_values.search.label = Valor Numérico Valores en Modo Búsqueda
+properties.number_values.search.placeholder = Valor Numérico Valores Marcador en Modo Búsqueda
+properties.number_values.search.range.from.label = Valor Numérico Valores en Modo Búsqueda Desde
+properties.number_values.search.range.from.placeholder = Valor Numérico Valores Marcador en Modo Búsqueda Desde
+properties.number_values.search.range.to.label = Valor Numérico en Modo Valores Búsqueda Hasta
+properties.number_values.search.range.to.placeholder = Valor Numérico Valores Marcador en Modo Búsqueda Hasta
+properties.number_values.values.1 = Versión 1.0
+properties.number_values.values.1_dot_1 = Versión 1.1
+properties.number_values.values.1_dot_2 = Versión 1.2
+properties.number_values.values.2 = Versión 2.0
+properties.number_values.error.NOT_NULLABLE = Valor Numérico Valores error de no Nullable
+
+
+properties.number_values_nullable.label = Valor Numérico Valores Nullable
+properties.number_values_nullable.placeholder = Valor Numérico Valores Nullable Marcador
+properties.number_values_nullable.search.label = Valor Numérico Valores Nullable en Modo Búsqueda
+properties.number_values_nullable.search.placeholder = Valor Numérico Valores Nullable Marcador en Modo Búsqueda
+properties.number_values_nullable.search.range.from.label = Valor Numérico Valores Nullable en Modo Búsqueda Desde
+properties.number_values_nullable.search.range.from.placeholder = Valor Numérico Valores Nullable Marcador en Modo Búsqueda Desde
+properties.number_values_nullable.search.range.to.label = Valor Numérico en Modo Valores Nullable Búsqueda Hasta
+properties.number_values_nullable.search.range.to.placeholder = Valor Numérico Valores Nullable Marcador en Modo Búsqueda Hasta
+properties.number_values_nullable.values.1 = Versión 1.0
+properties.number_values_nullable.values.1_dot_1 = Versión 1.1
+properties.number_values_nullable.values.1_dot_2 = Versión 1.2
+properties.number_values_nullable.values.2 = Versión 2.0
+properties.number_values_nullable.null_value = valor null
